--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,18 +2,35 @@
   "name": "Basic Dev Environment",
   "image": "mcr.microsoft.com/vscode/devcontainers/base:debian",
   "features": {
+    "postCreateCommand": ".devcontainer/postCreate.sh",
     "ghcr.io/devcontainers/features/node:1": {
+      "nodeGypDependencies": true,
+      "installYarnUsingApt": true,
       "version": "lts",
-      "installYarnUsingApt": false
+      "pnpmVersion": "latest",
+      "nvmVersion": "latest"
     },
     "ghcr.io/devcontainers/features/dotnet:1": {
       "version": "latest"
     },
     "ghcr.io/devcontainers/features/python:1": {
-      "version": "latest"
+      "installTools": true,
+      "version": "3.10"
     },
     "ghcr.io/devcontainers/features/github-cli:1": {
+      "installDirectlyFromGitHubRelease": true,
       "version": "latest"
+    },
+    "ghcr.io/devcontainers/features/dotnet:2": {
+      "version": "latest"
+    }
+  },
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "ms-python.debugpy",
+        "ms-python.python"
+      ]
     }
   }
 }
